[workspace]
members = [
  "aggregation/program",
  "aggregation/script",
  "bls12381/program",
  "bls12381/script",
  "bn254/program",
  "bn254/script",
  "chess/program",
  "chess/script",
  "cycle-tracking/program",
  "cycle-tracking/script",
  "fibonacci/program",
  "fibonacci/script",
  "groth16/program",
  "groth16/script",
  "io/program",
  "io/script",
  "is-prime/program",
  "is-prime/script",
  "json/lib",
  "json/program",
  "json/script",
  "patch-testing/program",
  "patch-testing/script",
  "regex/program",
  "regex/script",
  "rsa/program",
  "rsa/script",
  "rsp/program",
  "rsp/script",
  "ssz-withdrawals/program",
  "ssz-withdrawals/script",
  "tendermint/program",
  "tendermint/script",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"

[workspace.dependencies]
sp1-build = { path = "../crates/build" }
sp1-derive = { path = "../crates/derive" }
sp1-core-executor = { path = "../crates/core/executor" }
sp1-core-machine = { path = "../crates/core/machine" }
sp1-cli = { path = "../crates/cli", default-features = false }
sp1-eval = { path = "../crates/eval", default-features = false }
sp1-helper = { path = "../crates/helper", default-features = false }
sp1-primitives = { path = "../crates/primitives" }
sp1-prover = { path = "../crates/prover" }
sp1-recursion-compiler = { path = "../crates/recursion/compiler" }
sp1-recursion-core = { path = "../crates/recursion/core", default-features = false }
sp1-recursion-derive = { path = "../crates/recursion/derive", default-features = false }
sp1-recursion-gnark-ffi = { path = "../crates/recursion/gnark-ffi", default-features = false }
sp1-recursion-program = { path = "../crates/recursion/program", default-features = false }
sp1-recursion-circuit = { path = "../crates/recursion/circuit", default-features = false }
sp1-sdk = { path = "../crates/sdk" }
sp1-lib = { path = "../crates/zkvm/lib", default-features = false }
sp1-zkvm = { path = "../crates/zkvm/entrypoint", default-features = false }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "curve25519_dalek-v4.1.3-patch-v1" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "curve25519_dalek_ng-v4.1.1-patch-v1" } 
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "ecdsa-v0.16.8-patch-v1" }
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", tag = "ed25519_consensus-v2.1.0-patch-v1" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "secp256k1-v0.29.0-patch-v1" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }
sha2-v0-10-6 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.6-patch-v1" }
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.9.9-patch-v1" }
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.9.8-patch-v1" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "tiny_keccak-v2.0.2-patch-v1" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "substrate_bn-v0.6.0-patch-v1" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "bls12_381-v0.8.0-patch-v1" }
