[package]
name = "sp1-helper"
version = "0.0.0-test"
edition = "2021"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"], optional = true }
cargo_metadata = "0.18.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

[features]
clap = ["dep:clap"]
