[package]
name = "sp1-helper"
version = "0.0.0-test"
edition = "2021"
description = "Crate for building SP1 programs with build scripts."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
sp1-build = { path = "../build" }
cargo_metadata = "0.18.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
