[workspace]
members = [
  "k256", 
  "keccak", 
  "p256", 
  "secp256k1", 
  "sha", 
  "sp1-test-macro", 
  "sp1-test", 
  "curve25519-dalek", 
  "curve25519-dalek-ng", 
  "rustcrypto-bigint",
  "bls12-381",
  "bn",
]

exclude = [
  "sha/program", 
  "secp256k1/program", 
  "p256/program", 
  "keccak/program", 
  "k256/program",
  "ed25519-consensus/program", 
  "curve25519-dalek-ng/program", 
  "curve25519-dalek/program", 
  "RustCrypto-bigint/program",
  "bls12-381/program",
  "bn/program",
]

resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
sp1-zkvm = { path = "../crates/zkvm/entrypoint" }
sp1-build = { path = "../crates/build" }
sp1-sdk = { path = "../crates/sdk", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
sha2-v0-9-8 = { version = "0.9.8", package = "sha2" }
sha2-v0-10-6 = { version = "0.10.6", package = "sha2" }
ecdsa-core = { version = "0.16.9", package = "ecdsa", features = ["verifying"] }
ed25519-consensus = "2.1.0"
ed25519-dalek = { version = "2.1.0", features = ["alloc", "rand_core", "serde"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "rand_core", "serde"] }
curve25519-dalek-ng = { version = "4.1", default-features = false, features = ["u32_backend", "alloc", "serde"] }
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa", "serde", "alloc"] }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc", "serde"] }
alloy-primitives = { version = "0.8", features = ["k256"] }
secp256k1 = { version = "0.29", features = ["recovery", "global-context", "rand", "serde"] }
revm-precompile = { version = "11.0.1", default-features = false, features = ["kzg-rs", "secp256r1"] }
hex-literal = "0.4.1"
rand = "0.8.5"
sp1-test-macro = { path = "./sp1-test-macro/" }
sp1-test = { path = "./sp1-test/" }

[patch.crates-io]
sp1-lib = { path = "../crates/zkvm/lib" }
