[package]
name = "sp1-primitives"
version = "0.0.1-test"
edition = "2021"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
lazy_static = "1.5.0"
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
itertools = "0.13.0"
