[package]
name = "sp1-prover"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
sp1-recursion-program = { workspace = true }
sp1-recursion-circuit = { workspace = true }
sp1-recursion-compiler = { workspace = true }
sp1-recursion-core = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true }
sp1-core = { workspace = true }
sp1-primitives = { workspace = true }
p3-field = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-commit = { workspace = true }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
rayon = "1.10.0"
itertools = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
clap = { version = "4.5.9", features = ["derive", "env"] }
hex = "0.4.3"
anyhow = "1.0.83"
dirs = "5.0.1"
tempfile = "3.10.1"
subtle-encoding = "0.5.1"
serial_test = "3.1.1"
num-bigint = "0.4.6"
thiserror = "1.0.63"
oneshot = "0.1.8"

[[bin]]
name = "build_plonk_bn254"
path = "scripts/build_plonk_bn254.rs"

[[bin]]
name = "e2e"
path = "scripts/e2e.rs"

[features]
neon = ["sp1-core/neon"]
native-gnark = ["sp1-recursion-gnark-ffi/native"]
export-tests = []
