[package]
edition = "2021"
name = "sp1-recursion"
version = "0.1.0"

[dependencies]
p3-field = {workspace = true}
p3-baby-bear = {workspace = true}
p3-air = {workspace = true}
p3-matrix = {workspace = true}
p3-maybe-rayon = {workspace = true}
sp1-derive = {path = "../derive"}
tracing = "0.1.40"
sp1-core = { path = "../core" }