[package]
name = "sp1-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.120"
twirp = { git = "https://github.com/github/twirp-rs.git", rev = "c85f31f9c54957374e7dcb3534fc52cff0aa2dc5" }
async-trait = "0.1.80"
reqwest-middleware = "0.3.2"
reqwest = { version = "0.12.4", features = [
  "rustls-tls",
  "trust-dns",
  "stream",
] }
anyhow = "1.0.83"
sp1-prover = { path = "../prover" }
sp1-core = { path = "../core" }
futures = "0.3.30"
bincode = "1.3.3"
tokio = { version = "1.38.0", features = ["full"] }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-fri = { workspace = true }
indicatif = "0.17.8"
tracing = "0.1.40"
hex = "0.4.3"
log = "0.4.22"
axum = "=0.7.4"
alloy-sol-types = { version = "0.7.6", optional = true }
sha2 = "0.10.8"
dirs = "5.0.1"
tempfile = "3.10.1"
num-bigint = "0.4.6"
cfg-if = "1.0"
ethers = { version = "2", default-features = false }
strum_macros = "0.26.4"
strum = "0.26.3"
thiserror = "1.0.61"

[features]
default = ["network"]

neon = ["sp1-core/neon"]
native-gnark = ["sp1-prover/native-gnark"]
# TODO: Once alloy has a 1.* release, we can likely remove this feature flag, as there will be less 
# dependency resolution issues.
network = ["dep:alloy-sol-types"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }
