[package]
name = "sp1-sdk"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
prost = "0.12"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
twirp = { package = "twirp-rs", version = "0.3.0-succinct" }
async-trait = "0.1.81"
reqwest-middleware = "0.3.2"
reqwest = { version = "0.12.4", features = [
  "rustls-tls",
  "trust-dns",
  "stream",
] }
anyhow = "1.0.83"
sp1-prover = { workspace = true }
sp1-core = { workspace = true }
futures = "0.3.30"
bincode = "1.3.3"
tokio = { version = "1.38.1", features = ["full"] }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-fri = { workspace = true }
indicatif = "0.17.8"
tracing = "0.1.40"
hex = "0.4.3"
log = "0.4.22"
axum = "=0.7.4"
alloy-sol-types = { version = "0.7.6", optional = true }
sha2 = "0.10.8"
dirs = "5.0.1"
tempfile = "3.10.1"
num-bigint = "0.4.6"
cfg-if = "1.0"
ethers = { version = "2", default-features = false }
strum_macros = "0.26.4"
strum = "0.26.3"
thiserror = "1.0.63"
hashbrown = "0.14.5"
sysinfo = "0.30.13"

[features]
default = ["network"]
neon = ["sp1-core/neon"]
native-gnark = ["sp1-prover/native-gnark"]
# TODO: Once alloy has a 1.* release, we can likely remove this feature flag, as there will be less 
# dependency resolution issues.
network = ["dep:alloy-sol-types"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }
