[package]
name = "sp1-server"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
sp1-core = { workspace = true }
sp1-prover = { workspace = true }
prost = "0.13"
prost-types = "0.13"
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "^1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twirp = { git = "https://github.com/github/twirp-rs.git" }

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }
prost-build = "0.13"
twirp-build = { git = "https://github.com/github/twirp-rs.git" }