[package]
edition = "2021"
name = "sp1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
hex = "0.4.3"
p3-air = {workspace = true}
p3-baby-bear = {workspace = true}
p3-blake3 = {workspace = true}
p3-challenger = {workspace = true}
p3-commit = {workspace = true}
p3-dft = {workspace = true}
p3-field = {workspace = true}
p3-fri = {workspace = true}
p3-goldilocks = {workspace = true}
p3-keccak = {workspace = true}
p3-keccak-air = {workspace = true}
p3-matrix = {workspace = true}
p3-maybe-rayon = {workspace = true}
p3-mds = {workspace = true}
p3-merkle-tree = {workspace = true}
p3-poseidon2 = {workspace = true}
p3-symmetric = {workspace = true}
p3-uni-stark = {workspace = true}
p3-util = {workspace = true}
serde = "1.0.197"
serde_json = "1.0.114"
sp1-core = {path = "../core"}
tracing = "0.1.40"

[features]
default = ["sp1-core/perf"]
neon = ["sp1-core/neon"]
