[package]
name = "sp1-helper"
description = "Crate for building SP1 programs with build scripts."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata]
deprecated = "This crate is deprecated. Please use sp1_build instead."

[dependencies]
sp1-build = { workspace = true }
