[package]
name = "sp1-hypercube"
description = "The SP1 Hypercube proof system"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# sp1
sp1-derive = { workspace = true }
sp1-primitives = { workspace = true }

# slop
slop-algebra = { workspace = true }
slop-bn254 ={ workspace = true }
slop-air = { workspace = true }
slop-alloc = { workspace = true }
slop-basefold = { workspace = true }
slop-basefold-prover = { workspace = true }
slop-commit = { workspace = true }
slop-jagged = { workspace = true }
slop-sumcheck = { workspace = true }
slop-tensor = { workspace = true }
slop-multilinear = { workspace = true }
slop-challenger = { workspace = true }
slop-matrix = { workspace = true }
slop-koala-bear = { workspace = true }
slop-symmetric = { workspace = true }
slop-stacked = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-whir = { workspace = true }
slop-futures = { workspace = true }
slop-poseidon2 = { workspace = true }
slop-uni-stark = { workspace = true }

# misc
futures = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
hashbrown = { workspace = true, features = ["serde", "inline-more"] }
itertools = { workspace = true }
tracing = { workspace = true }
rayon-scan = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
derive-where = { workspace = true }
thousands = { workspace = true }
deepsize2 = { workspace = true }

arrayref = { workspace = true }
num-bigint = { workspace = true }
strum = { workspace = true, features = ["derive"] }
num-traits = { workspace = true }
num_cpus = { workspace = true }

# async
tokio = { workspace = true, features = ["rt", "sync", "time"] }

[dev-dependencies]
sp1-zkvm = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
test-proof = []

[lints]
workspace = true
